--- a/iTalentBlogProject.Web/appsettings.Development.json
+++ b/iTalentBlogProject.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "WebApi": {
+    "BaseUrl": "https://localhost:7071/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
