--- a/iTalentBlogProject.Web/iTalentBlogProject.Web.csproj
+++ b/iTalentBlogProject.Web/iTalentBlogProject.Web.csproj
@@ -6,4 +6,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Areas\Admin_Area\**" />
+    <Content Remove="Areas\Admin_Area\**" />
+    <EmbeddedResource Remove="Areas\Admin_Area\**" />
+    <None Remove="Areas\Admin_Area\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\AdminPanel\Data\" />
+    <Folder Include="Areas\AdminPanel\Models\" />
+    <Folder Include="Views\Home\" />
+  </ItemGroup>
+
 </Project>
